cmake_minimum_required(VERSION 3.17)
project(c_base_pro)

set(CMAKE_CXX_STANDARD 17)

add_executable(c_base_pro main.cpp 04_three_eye.cpp  05_switch.cpp 06_calc_table.cpp 07_guass_num.cpp 08_arr_01.cpp 09_bubble_sort.cpp 10_char_string.cpp 11_str_func.cpp 12_struct_body.cpp 13_practice100.cpp 14_linklist.cpp 15_cplus.cpp 16_cplus_stack_heap.cpp 17_pointer.cpp 11_2_sprintf.cpp 18_calloc_realoc.cpp 19_scanf.cpp 20_find_sub_str.cpp 21_2_const.cpp 21_two_pointer.cpp 22_file_pointer.cpp 23_bit_op.cpp 08_arr_02.cpp 12_struct_body_2.cpp 24_file_op_1.cpp ConfigFile.h ConfigFile.cpp 25_ConfigFile_test.cpp 26_func_pointer.cpp LinkList.h LinkList.cpp 27_LinkListTest.cpp)

